# CSPlayer

./: CMakeLists.txt  Readme.md  comp.txt  task.txt
include/: CSError.h  CSLoader.h  CSLog.h  CSPlayer.h  CSPlaylist.h  pch.h
src/: main.cpp  main_miniaudio.cpp
test/: Compiler.lnk  log.txt
